<resources>
    <string name="app_name" translatable="false">Ready4Play</string>
    <string name="text_blank" translatable="false">blank</string>
    <string name="text_score">Score</string>
    <string name="preference_file_key" translatable="false">com.oh.ready4play.PREFERENCE_FILE_KEY</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="text_giveName">Insert name for player</string>
    <string name="text_tooLongName">Name too long! Max 15 characters.</string>
    <string name="dialog_new_info">You can always continue game from main menu. Proceed?</string>
    <string name="dialog_vahvista">Proceed</string>
    <string name="dialog_peruuta">Continue game</string>
    <string name="text_waitForAdToLoad">Wait for ad to load and try again…</string>
    <string name="text_gametitle" translatable="false">Ready4Play</string>
    <string name="text_newGame">New Game</string>
    <string name="text_gameSettings">Game Settings</string>
    <string name="text_quit">Quit</string>
    <string name="text_tasksInGame">Tasks in game</string>
    <string name="text_diceAdd">Add to dice</string>
    <string name="text_dice0">Normal dice</string>
    <string name="text_dice2">Add 2 to dice</string>
    <string name="text_dice3">Add 3 to dice</string>
    <string name="text_dice5">Add 5 to dice</string>
    <string name="text_durationDictionary">Duration of the Dictionary:</string>
    <string name="text_inSeconds">seconds</string>
    <string name="saved_Continue" translatable="false">canContinue</string>
    <string name="saved_task_hitler" translatable="false">task1</string>
    <string name="saved_task_hoe" translatable="false">task2</string>
    <string name="saved_task_girlsvsboys" translatable="false">task3</string>
    <string name="saved_task_truthordare" translatable="false">task4</string>
    <string name="saved_task_wouldyourahter" translatable="false">task5</string>
    <string name="saved_task_3shots" translatable="false">task6</string>
    <string name="saved_task_2truths1lie" translatable="false">task7</string>
    <string name="saved_task_dictionary" translatable="false">task8</string>
    <string name="saved_task_fthedealer" translatable="false">task9</string>
    <string name="saved_task_horserace" translatable="false">task10</string>
    <string name="saved_task_busdriver" translatable="false">task11</string>
    <string name="saved_task_stack" translatable="false">task12</string>
    <string name="saved_dice" translatable="false">diceValue</string>
    <string name="saved_durationDictionary" translatable="false">durationDictionary</string>
    <string name="text_task1_settings">1. Hitler</string>
    <string name="text_task2_settings">2. Hoe</string>
    <string name="text_task3_settings">3. Girls vs. Boys</string>
    <string name="text_task4_settings">4. Truth or Dare</string>
    <string name="text_task5_settings">5. Would You Rather</string>
    <string name="text_task6_settings">6. 3 Shots</string>
    <string name="text_task7_settings">7. 2 Truths 1 Lie</string>
    <string name="text_task8_settings">8. Dictionary</string>
    <string name="text_task9_settings">9. Fuck the Dealer</string>
    <string name="text_task10_settings">10. Horse Race</string>
    <string name="text_task11_settings">11. Bus driver</string>
    <string name="text_task12_settings">Stack</string>
    <string name="text_return">Return</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_addPlayers">Add players</string>
    <string name="text_typePlayerName">Type name here (max 15 char)</string>
    <string name="text_addedPlayers">Players:</string>
    <string name="text_add" translatable="false">+</string>
    <string name="text_startGame">Start Game!</string>
    <string name="text_minMax">(2–10 players)</string>
    <string name="text_newGameText">Always drink responsibly!\n\nRemember the real reason you had fun!\n\nGood luck, have fun!</string>
    <string name="text_fail">Fail</string>
    <string name="text_3" translatable="false">+3</string>
    <string name="text_X" translatable="false">X</string>
    <string name="text_mainMenu">Main Menu</string>
    <string name="text_inTurn">Turn: </string>
    <string name="text_throwDice">Throw the Dice!</string>
    <string name="text_skipTurn">Skip turn</string>
    <string name="text_winner">We have a winner!\n\nCongratulations</string>
    <string name="text_winner2">(Also take 1 sip)</string>
    <string name="text_secondRound">Second round!</string>
    <string name="text_hitlerTitle" translatable="false">Hitler</string>
    <string name="text_tapToDraw">Tap card to draw!</string>
    <string name="text_taskDescriptionHitler">Rules:\n\nAce, Waterfall\n2, Give 2 sips\n3, Drink 3 sips\n4, Hitler\n5, 123\n6, Women drink 3 sips\n7, Category\n8, Rule\n9, Everybody drinks 3 sips\n10, Men drink 3 sips\n11, Skip-card\n12, Hoe\n13, Kingdrink!\n\nTap card to draw!</string>
    <string name="text_continueGame">Continue game</string>
    <string name="text_waterfallDesc">Waterfall!\n\nAll players start to drink.\nPlayer who draw the card can stop drinking first. Other players may not stop drinking before players before him/her has stopped.</string>
    <string name="text_give2">Give two!\n\nGive 2 sips to someone!</string>
    <string name="text_drink3">Drink three!\n\nDrink 3 sips!</string>
    <string name="text_hitler">Hitler\n\nLast one to stand up and shout "Hitler!", drinks 3 sips.
        Probably you since you are still reading this!</string>
    <string name="text_123">123!\n\nThe one who drew the card drinks 1, next one 2, next one 3 etc…</string>
    <string name="text_womenDrink">Women drink!\n\nAll the women drink 3 sips!</string>
    <string name="text_category">Category!\nPlayer who drew card tells category and first example. Next player must say new instance of that category. Failing to come up with new, results to 3 sips penalty. (Played until someone fails)</string>
    <string name="text_rule">Rule!\n\nMake new rule for the game! Rule stays in place until next rule (or you decide, it\'s your rule anyway)</string>
    <string name="text_everybodyDrink">Everyone drinks!\n\nEveryone takes 3 sips</string>
    <string name="text_menDrink">Men drink!\n\nAll the men drink 3 sips</string>
    <string name="text_skip">Skip-Task!\n\nWohoo! This is the "Skip-Task"-card! Unfortunately it doesn\'t allow you to skip actual tasks, but feel free to skip next few sips you should otherwise take!</string>
    <string name="text_hoe">Hoe!\n\nMake a hoe out of friend! Person you choose, has to drink always when you drink (related to game). To seal the deal, both of you take 1 sip now! (So the hoe already takes 2, have fun!)</string>
    <string name="text_kingdrink">KingDrink\n\nTHE Drink! \nPour few sips of your drink to glass. The player mentioned at the screen does the same and drinks it!</string>
    <string name="text_huoraTitle">Hoe</string>
    <string name="text_taskDescriptionHoe">Make a hoe out of friend!\n\nPerson you choose, has to drink always when you drink (related to game).\n\nTo seal the deal, both of you take 1 sip now! (So the hoe already takes 2, have fun!)</string>
    <string name="text_tytotVsPojatTitle">Girls VS Boys!</string>
    <string name="text_taskDescriptiontytotVsPojat">Together as group, come up with a challenge and create an epic battle against sexes!\n\nYou may choose if the whole team participates or just one on one or something else.\n\nLoser team will get to do a task given by winners!</string>
    <string name="text_TruthOrDareTitle">Thruth or Dare!</string>
    <string name="text_taskDescriptionTruthOrDarePt1"> chooses truth or dare.</string>
    <string name="text_taskDescriptionTruthOrDarePt2">Truth: Other players asks something and </string>
    <string name="text_taskDescriptionTruthOrDarePt3"> has to answer truthfully.</string>
    <string name="text_taskDescriptionTruthOrDarePt4">Dare: Other players dare </string>
    <string name="text_taskDescriptionTruthOrDarePt5"> to do a task they choose.</string>
    <string name="text_WouldYouRatherTitle">Would You Rather?</string>
    <string name="text_taskDescriptionWouldYouRather">Other players ask \"would you rather\" question from</string>
    <string name="text_taskDescriptionWouldYouRather2">Also take 2 sips.</string>
    <string name="text_3ShotsTitle">Three shots!</string>
    <string name="text_taskDescription3Shots">Pour three shots.\n\nOne contains alcohol, other two doesn\'t.\n\nExample: 1 shot of vodka, two shots of water.</string>
    <string name="text_taskDescriprion3Shots2"> chooses one blindfolded and drinks it.</string>
    <string name="text_taskDescription3Shots3">No smelling it! Just drink ;)</string>
    <string name="text_2Truths1LieTitle">Two Truths One Lie!</string>
    <string name="text_taskDescription2Truths1Lie">Think of two true events from your life or things about you and one lie.  Other players may ask questions about those claims.  Finally everybody tries to guess which one is the lie.  Wrong guess gets rewarded with 5 sips!  Succeeding to fool everybody results +3 steps to your next dice! You will be presented \"Failure\" and \"+3\" buttons at board view visible at your turns to click before throwing the dice when completed this task.  Game can continue until you are ready with claims, but there is 3 sips penalty every round to you until you complete this task.</string>
    <string name="text_dictionaryTitle">Dictionary!</string>
    <string name="text_taskDescriptionDictionary">Choose yourself or draw a partner for this task\n\nExplain words presented here before timer runs out\n</string>
    <string name="text_taskDescriptionDictionary2">You have \n</string>
    <string name="text_seconds">seconds</string>
    <string name="text_taskDescriptionDictionary3">You can explain the last word after the time has run out\n\nYou may not use any part of the word itself\n\nYou may skip words with the skip button (penalty 0,5)\n\nGood luck!</string>
    <string name="text_btSkip">Skip!</string>
    <string name="text_btCorrect">Correct!</string>
    <string name="text_start">Start!</string>
    <string name="text_lopputekstiDictionary">Time\'s up!\n\nGive sips same amount as your score!</string>
    <string name="text_fTheDealerTitle">Fuck The Dealer!</string>
    <string name="text_taskDescriptionFTheDealer">, take this device to your hands for the duration of this task!\n</string>
    <string name="text_taskDescriptionFTheDealer2">Touch "peek" button to peek the card\n</string>
    <string name="text_taskDescriptionFTheDealer3"> tries to guess the card\n</string>
    <string name="text_taskDescriptionFTheDealer4">After first guess, you have to tell if your card is higher or lower (or if it\'s correct).\n\nIf the first guess is right you have to take 5 sips\n\nSame player takes a second guess\n\nYou show everybody the card\n\nIf the card is right, you take 3 sips, if wrong the one who guessed, takes 3 sips\n\nChange card and repeat to all players</string>
    <string name="text_btPeek">Peek</string>
    <string name="text_btNextCard">Next card</string>
    <string name="text_horseRaceTitle">Horse Race!</string>
</resources>