<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Asetukset">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tvTitle_Asetukset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_gameSettings"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle_Asetukset" />

    <TextView
        android:id="@+id/tvNoppa_Asetukset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_diceAdd"
        app:layout_constraintBottom_toTopOf="@+id/rgNoppa_Asetukset"
        app:layout_constraintEnd_toEndOf="@+id/rgNoppa_Asetukset"
        app:layout_constraintStart_toStartOf="@+id/rgNoppa_Asetukset"
        app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <RadioGroup
        android:id="@+id/rgNoppa_Asetukset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoppa_Asetukset">

        <RadioButton
            android:id="@+id/rbNoppa0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dice0"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbNoppa2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dice2"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbNoppa3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dice3"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/rbNoppa5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_dice5"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tasksInGame"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/tvNoppa_Asetukset" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rgNoppa_Asetukset"
        app:layout_constraintTop_toBottomOf="@+id/divider3">

        <CheckBox
            android:id="@+id/cbTeht1_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task1_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht2_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht2_Asetukset"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbTeht2_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task2_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht3_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht3_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht1_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht3_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task3_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbTeht6_Asetukset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht2_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht4_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task4_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht5_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht1_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht5_Asetukset"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbTeht5_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task5_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht6_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht2_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht6_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht4_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht6_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task6_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbTeht9_Asetukset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cbTeht3_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht5_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht7_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task7_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht8_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht4_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht8_Asetukset"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbTeht8_Asetukset"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task8_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht9_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht5_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht9_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht7_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht9_Asetukset"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task9_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cbKasa_Asetukset"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cbTeht6_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht8_Asetukset" />

        <CheckBox
            android:id="@+id/cbTeht10_Asetukset"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task10_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbTeht11_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht7_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbTeht11_Asetukset"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/cbTeht11_Asetukset"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task11_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/cbKasa_Asetukset"
            app:layout_constraintStart_toEndOf="@+id/cbTeht8_Asetukset"
            app:layout_constraintStart_toStartOf="@+id/cbKasa_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht10_Asetukset" />

        <CheckBox
            android:id="@+id/cbKasa_Asetukset"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/text_task12_settings"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cbTeht9_Asetukset"
            app:layout_constraintTop_toBottomOf="@+id/cbTeht11_Asetukset" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/btVahvista_Asetukset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btPaluu_Asetukset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btVahvista_Asetukset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btVahvista_Asetukset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btPaluu_Asetukset" />

</androidx.constraintlayout.widget.ConstraintLayout>